--- a/template/pages/login/login.html
+++ b/template/pages/login/login.html
@@ -14,24 +14,16 @@
       </section>
       <section class="register___section right">
         <header>
-          <h1>Register</h1>
+          <h1>Login</h1>
         </header>
         <main>
           <form action="" method="post">
-            <label for="username">Username:</label>
-            <input type="text" name="username" id="username" /><br />
-            <label for="firstname">Firstname:</label>
-            <input type="text" name="firstname" id="firstname" /><br />
-            <label for="lastname">Lastname:</label>
-            <input type="text" name="lastname" id="lastname" /><br />
             <label for="email">Email:</label>
             <input type="email" name="email" id="email" /><br />
             <label for="password">Password:</label>
             <input type="password" name="password" id="password" /><br />
-            <label for="password2">Confirm Password:</label>
-            <input type="password" name="password2" id="password2" /><br />
             <input type="submit" value="Register" class="btn__submit" />
-            <a href="../login/login.html">Login</a>
+            <a href="../register/register.html">Create Account</a>
           </form>
         </main>
       </section>
